# UniverseLM

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitpod.yml  .vercelignore  Dockerfile  README.md  environment-lock.yml  environment.yml  main.py  package.json  pyproject.toml  run_server.py  schema.sql  test_index.http  vercel.json
.github/: FUNDING.yml
.github/workflows/: python-app.yml
app/: config.py  constants.py  main.py  test.py
app/core/: api_auth.py  auth.py  clients.py
app/core/db/: __init__.py  database.py
app/core/routes/: admin.py  apotheosis.py  auth.py  chat.py  dataview.py  functions.py  user.py
app/core/schemas/: communities.py  entities.py  info.py  users.py
app/lib/: chat.py  society.py  states.py  users.py
app/lib/llm/: chat_interface.py  rag.py  rag_docqa.py
app/lib/utils/: asynctools.py  cryptography.py  logic.py
app/test/: asynctest.py
frontend/: .editorconfig  .env.example  .eslintrc.cjs  .prettierrc  README.md  astro.config.mjs  components.json  mdsvex.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.mjs  tsconfig.json
frontend/public/images/: default_user.png:Zone.Identifier
frontend/src/components/: Footer.svelte  GitHubStarView.svelte  Globe.astro  Navbar.svelte  TagsInput.svelte
frontend/src/data/: constants.ts  datafunctions.ts  envconfig.ts  mocked_communities.json  stores.ts
frontend/src/layouts/: BlogPostLayout.astro  DashboardLayout.astro  DefaultLayout.astro  DefaultLayoutWithHeader.astro  Layout.astro  (+1 more)
notebooks/: test.ipynb
notebooks/sample_responses/: wild_west.md
(+139 files in other folders)
