[tool.poetry]
name = "universelm"
version = "0.1.0"
description = ""
authors = ["Ameer Arsala <ameer.arsala03@gmail.com>"]
license = "LICENSE"
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.0"
chainlit = "^1.1.0"
pytest = "^8.2.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
langchain = "^0.1.20"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.7.0"
langchain-google-genai = "^1.0.3"
langchain-openai = "^0.1.6"
jupyter = "^1.0.0"
ollama = "^0.2.0"
google-generativeai = "0.5.2"
langchain-cohere = "^0.1.5"
langchainhub = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
